# Copyright (c) 2019 Fraunhofer FOKUS and others.
#
# This program and the accompanying materials
# are made available under the terms of the Eclipse Public License 2.0
# which accompanies this distribution, and is available at 
# https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
# 
# Contributors:
#     Max Bureck (Fraunhofer FOKUS)


[package]
name = "eclipse-starter"
version = "0.1.0"
authors = ["Max Bureck <max.bureck@fokus.fraunhofer.de>"]
edition = "2018"
license = "EPL-2.0"

[dependencies]
unicode-segmentation = "1.3.0"
dlopen = "0.1.7"
dlopen_derive = "0.1.4"
regex = "1.1.9"
lazy_static = "1.3.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
incremental = false