# Copyright (c) 2019 Fraunhofer FOKUS and others.
#
# This program and the accompanying materials
# are made available under the terms of the Eclipse Public License 2.0
# which accompanies this distribution, and is available at 
# https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
# 
# Contributors:
#     Max Bureck (Fraunhofer FOKUS)

[workspace]

members = [
    "eclipse-common",
    "eclipse-launcher",
    "eclipse-library",
    "jni-mangle",
]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
debug = false