# Copyright (c) 2019 Fraunhofer FOKUS and others.
#
# This program and the accompanying materials
# are made available under the terms of the Eclipse Public License 2.0
# which accompanies this distribution, and is available at 
# https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
# 
# Contributors:
#     Max Bureck (Fraunhofer FOKUS)

[package]
name = "eclipse-common"
version = "0.1.0"
authors = ["Max Bureck <max.bureck@fokus.fraunhofer.de>"]
edition = "2018"
license = "EPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.1.9"
lazy_static = "1.3.0"
unicode-segmentation = "1.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.7", features = ["winuser"]}
user32-sys = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.7.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.18.4"
objc = "0.2.6"
