# Copyright (c) 2019 Fraunhofer FOKUS and others.
#
# This program and the accompanying materials
# are made available under the terms of the Eclipse Public License 2.0
# which accompanies this distribution, and is available at 
# https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
# 
# Contributors:
#     Max Bureck (Fraunhofer FOKUS)


[package]
name = "eclipse-launcher"
version = "0.1.0"
authors = ["Max Bureck <max.bureck@fokus.fraunhofer.de>"]
edition = "2018"
license = "EPL-2.0"

[features]
# Starts a console on start of launcher, only available on windows
win_console = ["eclipse-common/win_console"]

[dependencies]
unicode-segmentation = "1.3.0"
dlopen = "0.1.7"
dlopen_derive = "0.1.4"
eclipse-common = { path = "../eclipse-common" }


[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.62"

[build-dependencies]
winres = "0.1.11"

[[bin]]
name = "eclipse"
path="src/main.rs"

# On feature "win_console" we create the executable "eclipsec"
# Unfortunately this will also link a regular "eclipse" bin, 
# since there is no way to exclude a bin on a certain feature.
# call `cargo --bin eclipsec --features win_console` to limit
# cargo to only link "eclipsec".
[[bin]]
name = "eclipsec"
required-features = ["win_console"]
path="src/main.rs"
