# Copyright (c) 2019 Fraunhofer FOKUS and others.
#
# This program and the accompanying materials
# are made available under the terms of the Eclipse Public License 2.0
# which accompanies this distribution, and is available at 
# https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
# 
# Contributors:
#     Max Bureck (Fraunhofer FOKUS)

[package]
name = "eclipse-library"
version = "0.1.0"
authors = ["Max Bureck <max.bureck@fokus.fraunhofer.de>"]
edition = "2018"
license = "EPL-2.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "eclipse_lib"
crate-type = ["cdylib"]

[dependencies]
jni = "0.13.0"
lazy_static = "1.3.0"
eclipse-common = { path = "../eclipse-common" }
jni-mangle = { path = "../jni-mangle" }
